# c-engine

./: .gitignore  .gitmodules  BuildCPP.sh  BuildCSharp.sh  CMakeLists.txt  CMakePresets.json  README.md  Run.sh  build-run.sh  imgui.ini
EngineBindingsGenerator/: CppSharpModuleInfo.cs  CppSharpModuleRegistry.cs  EngineBindings.cs  Program.cs
GameBindings/: .gitignore  GameBindings.csproj
assets/animations/: bee.anim
assets/materials/: default.material  pot_leaf.material
assets/models/: WavyPlantPot.glb  physics_capsule.glb  physics_sphere.glb
assets/scenes/: jolt_physics_test.scene  level_one.scene  main.scene  scene3d.scene  shipp.scene  space_invaders.scene  tank_game.scene
assets/scripts/: GameScripts.csproj  MyScript.cs  Player.cs  Script.as  Test.lua  TestOne.as  TestTwo.as  test.as  test.lua
assets/scripts/Canis/: InternalCalls.cs
assets/scripts/anglescripts/: Time.as
assets/shaders/: debug_line.vs  model3d.fs  model3d.vs  sprite.fs  sprite.vs  test.vert.glsl  test.vert.spv
canis/: CMakeLists.txt  main.cpp
canis/include/Canis/: App.hpp  Asset.hpp  AssetManager.hpp  Camera2D.hpp  Canis.hpp  ConfigData.hpp  ConfigHelper.hpp  Debug.hpp  Editor.hpp  Entity.hpp  GameCodeObject.hpp  IOManager.hpp  InputManager.hpp  Math.hpp  OpenGL.hpp  Scene.hpp  ScriptTypeId.hpp  Shader.hpp  System.hpp  Time.hpp  UUID.hpp  Window.hpp  Yaml.hpp
canis/include/Canis/Data/: Bit.hpp  Character.hpp  Key.hpp  SpriteVertex.hpp  Types.hpp
canis/include/Canis/DataStructure/: AStar.hpp  OctTree.hpp  QuadTree.hpp
canis/include/Canis/ECS/: RuntimeECS.hpp
canis/include/Canis/ECS/Systems/: JoltPhysics3DSystem.hpp  MeshRenderer3DSystem.hpp  ModelAnimation3DSystem.hpp  SpriteAnimationSystem.hpp  SpriteRenderer2DSystem.hpp
canis/src/: App.cpp  Asset.cpp  AssetManager.cpp  Camera2D.cpp  Canis.cpp  Debug.cpp  Editor.cpp  EditorStub.cpp  Entity.cpp  IOManager.cpp  InputManager.cpp  Math.cpp  Scene.cpp  Shader.cpp  Time.cpp  UUID.cpp  Window.cpp  Yaml.cpp
canis/src/DataStructure/: AStar.cpp  PerlinNoise2D.cpp
canis/src/ECS/: RuntimeECS.cpp
canis/src/ECS/Systems/: JoltPhysics3DSystem.cpp  MeshRenderer3DSystem.cpp  ModelAnimation3DSystem.cpp  SpriteAnimationSystem.cpp  SpriteRenderer2DSystem.cpp
cmake/toolchains/: emscripten.cmake
docs/: engine-guide.md  web-build.md
game/: CMakeLists.txt  GameCode.cpp  GameCode.hpp
game/cmake/: GenerateRegisterScripts.cmake
game/include/: BallMovement.hpp  ConfigHelper.hpp  GameData.hpp  GamePCH.hpp  RegisterScripts.hpp
game/include/Pong/: Ball.hpp  Paddle.hpp
game/include/RollABall/: BoostPad.hpp  CameraFollow.hpp  PickupSpinner.hpp  PlayerController.hpp
game/include/SpaceInvaders/: GameController.hpp  Invader.hpp  PlayerShip.hpp  Projectile.hpp  SwarmController.hpp
game/include/TankGame/: Bounce.hpp  Bullet.hpp  FollowMouse.hpp  Tank.hpp
game/src/: BallMovement.cpp  Game.cpp
game/src/Pong/: Ball.cpp  Paddle.cpp  RegisterPong.cpp
game/src/RollABall/: BoostPad.cpp  CameraFollow.cpp  PickupSpinner.cpp  PlayerController.cpp
game/src/SpaceInvaders/: GameController.cpp  Invader.cpp  PlayerShip.cpp  Projectile.cpp  SwarmController.cpp
game/src/TankGame/: Bounce.cpp  Bullet.cpp  FollowMouse.cpp  Tank.cpp
project/assets/defaults/materials/: default.material
project/assets/defaults/templates/scenes/: 2d_scene.scene
project/assets/materials/: low_skybox.skybox  pot.material  pot_dirt.material
project/assets/models/: WavyPlantPot.glb  physics_cube.glb
project/assets/scenes/: roll_a_ball.scene  scene3d.scene  tank_game.scene
project/assets/shaders/: debug_line.fs  skybox.fs  skybox.vs  sprite.fs  sprite.vs
project_settings/: imgui.ini
scripts/: build-web.sh  ensure_emsdk.sh
src/: ScriptInstance.cpp  ScriptInstance.hpp  main.cpp
src/Canis/: Debug.hpp  Editor.cpp  Entity.hpp  FrameRateManager.cpp  FrameRateManager.hpp  Math.cpp  Math.hpp  ScriptInstance.cpp  ScriptInstance.hpp  World.cpp  World.hpp
src/Canis/Data/: Transform.hpp
src/canis/: Canis.cpp  Canis.hpp  Debug.cpp  Debug.hpp  Entity.cpp  Entity.hpp  FrameRateManager.cpp  FrameRateManager.hpp  Graphics.cpp  Graphics.hpp  Scene.hpp  Script.hpp  ScriptManager.cpp  ScriptManager.hpp  Window.cpp  Window.hpp
src/core/: DArray.hpp  List.cpp  List.hpp  String.hpp  arena.c  arena.h  vec.c  vec.cpp  vec.hpp
src/scripting/: CanisWindow.cpp  CanisWindow.hpp  Logger.cpp  Logger.hpp  ScriptMacros.hpp
tools/: generate-scripting-wrappers.py
